--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/nitaiaharoni1/react-restaurant-website.git"
+        "url": ""
     },
-    "author": "Nitai Aharoni",
-    "license": "ISC",
+    "author": "",
+    "license": "",
     "bugs": {
-        "url": "https://github.com/nitaiaharoni1/react-restaurant-website/issues"
+        "url": ""
     },
-    "homepage": "https://github.com/nitaiaharoni1/react-restaurant-website#readme",
+    "homepage": "",
     "dependencies": {
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.4",
