--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,5 +6,12 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Spring Security
+jwt.signing.key.secret=murasakiS3cr3t
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=14400
